feat: implement Phase 2.5 Security deliverables and enhance test coverage - Secure [AuditoriaController] (Admin only) and [UsuarioController] (User management restricted to Admin). - Configure [ProductController] to allow `EMPLEADO` (Owner) access for CRUD operations. - Refactor `SecurityConfig` and [application.properties] for Cloudflare Tunnel CORS support and readability. - Add [ProductRepositoryTest] to verify Raw JDBC logic and data integrity. - Enhance [ProductControllerTest]  with TDD scenarios for Update, Invalid Data (400), and Not Found (404). - Update [BaseIntegrationTest] helpers and fix [GlobalExceptionHandler] to support validation stubbing. - Cleanup: Remove TODOs, fix comments, and document Technical Debt in [.cursorrules].